[gd_scene load_steps=12 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://font/8-BIT WONDER.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://font/04B_03__.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://MessageLabel.tres" type="Theme" id=4]
[ext_resource path="res://font/MunroSmall-wPZw.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://font/munro.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_top = -14
extra_spacing_bottom = -7
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 21
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 74.8356
margin_top = 215.929
margin_right = 241.836
margin_bottom = 252.929
custom_fonts/font = SubResource( 1 )
text = "Connect"

[node name="Button2" type="Button" parent="."]
margin_left = 75.0556
margin_top = 263.489
margin_right = 242.056
margin_bottom = 300.489
custom_fonts/font = SubResource( 1 )
text = "Disonnect"

[node name="Button3" type="Button" parent="."]
margin_left = 765.128
margin_top = 531.126
margin_right = 875.128
margin_bottom = 558.126
custom_fonts/font = SubResource( 1 )
text = "SEND"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 359.349
margin_top = 409.102
margin_right = 875.349
margin_bottom = 517.102
custom_fonts/font = SubResource( 2 )
breakpoint_gutter = true
smooth_scrolling = true
wrap_enabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 310.836
margin_top = 80.4733
margin_right = 910.836
margin_bottom = 396.474
theme = ExtResource( 4 )
custom_fonts/normal_font = SubResource( 3 )
scroll_following = true

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 74.8356
margin_top = 168.834
margin_right = 241.836
margin_bottom = 205.834
custom_fonts/font = SubResource( 4 )
text = "127.0.0.1"
align = 1
max_length = 15
clear_button_enabled = true

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 74.8356
margin_top = 122.834
margin_right = 241.836
margin_bottom = 159.834
custom_fonts/font = SubResource( 5 )
text = "YOUR ID"
align = 1
max_length = 10
clear_button_enabled = true
